Update VersionHelper.java